--- a/index.html
+++ b/index.html
@@ -140,18 +140,20 @@
           <button class="absolute right-2 top-1/2 transform -translate-y-1/2 bg-blue-700 px-3 sm:px-4 py-1 sm:py-2 text-white text-xs sm:text-sm md:text-base rounded-full" onclick="console.log('Search clicked with input:', document.getElementById('searchInput').value)">Search</button>
         </div>
       </div>
-      <!-- Right side: Tutor image and testimonial -->
+      <!-- Centered testimonial between left and right -->
       <div class="flex flex-col items-center lg:items-end relative w-full max-w-xs aspect-[1/1] md:items-end mt-8 lg:mt-0">
         <!-- Circular image wrapper -->
         <div class="h-40 w-40 sm:h-60 sm:w-60 flex items-center justify-center">
           <img src="images/brunette-woman-hugging-laptop 1.png" alt="Tutor" class="rounded-full object-cover w-full h-full">
         </div>
-        <!-- Testimonial box - visible only on large screens -->
-        <div class="bg-white bg-opacity-20 text-left text-white p-4 w-48 sm:w-64 text-center absolute left-1/2 top-2/3 text-xs hidden lg:block" style="transform: translate(-50%, -50%)">
-          <img src="images/hero quote.svg" class="absolute h-16 sm:h-[92px] left-0 top-0">
-          <p class="font-semibold text-left mx-7">Shyam</p>
-          <p class="text-left mx-7">In a coaching role, you ask the questions and rely more on your staff who become the experts to provide the information.</p>
-          <p class="text-left mx-7 text-blue-200 font-semibold">4.9</p>
+      </div>
+      <!-- Testimonial box: always visible and centered between left and right -->
+      <div class="flex flex-col items-center justify-center w-full lg:w-1/3 mx-auto my-6">
+        <div class="bg-white bg-opacity-20 text-white p-4 rounded-lg w-full max-w-xs text-center relative">
+          <img src="images/hero quote.svg" class="h-12 sm:h-16 mx-auto mb-2">
+          <p class="font-semibold">Shyam</p>
+          <p class="mt-1">In a coaching role, you ask the questions and rely more on your staff who become the experts to provide the information.</p>
+          <p class="mt-2 text-blue-200 font-semibold text-lg">4.9</p>
         </div>
       </div>
     </section>
