--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <!-- Hero Section: Main content and image -->
   <section class="flex flex-col-reverse lg:flex-row items-center mt-8 px-4 sm:px-8 lg:px-24 py-10 sm:py-16 lg:py-20 bg-[linear-gradient(to_bottom_right,_#083F9B_0%,_#7F56D9_100%)] text-white">
     <!-- Left side text content and testimonial horizontally aligned -->
-    <div class="flex flex-col lg:flex-row flex-1 items-center lg:items-start w-full">
+    <div class="flex flex-col mt-9 lg:flex-row flex-1 items-center lg:items-start w-full">
       <div class="flex-1 text-center lg:text-left">
         <p class="uppercase text-xs sm:text-sm tracking-widest">Successful coaches are visionaries</p>
         <h1 class="text-3xl sm:text-4xl md:text-5xl text-left font-bold my-4 leading-tight">
