--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
       </h2>
       <p class="mt-3 text-gray-500 text-sm">100+ unique online course list designs</p>
     </div>
-  
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-6 mx-40 gap-6 items-center text-center">
+
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-6 items-stretch text-center px-2 sm:px-0">
       <!-- Category Cards -->
       <div class="bg-white p-4 rounded-lg shadow">
         <div class="flex justify-center mb-6"><img src="images/Digital Market.svg" class="w-12 h-12"></div>
