--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
     </div>
 
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-6 items-stretch text-center px-2 sm:px-0">
-      <!-- Category Cards -->
+  <!-- Category Cards -->
       <div class="bg-white p-4 rounded-lg shadow">
         <div class="flex justify-center mb-6"><img src="images/Digital Market.svg" class="w-12 h-12"></div>
         <h3 class="font-semibold text-sm sm:text-xs mb-6">Digital<br> Marketing</h3>
@@ -421,7 +421,7 @@
 
   <!-- Subscribe Box -->
   <section class="bg-white py-20 px-4 sm:px-6 lg:px-16 sm:text-xs md:text-base">
-  <div class="relative bg-gradient-to-r from-indigo-500 to-pink-500 text-white rounded-xl p-12 max-w-3xl mx-auto mb-10">
+  <div class="relative bg-gradient-to-r from-indigo-500 to-pink-500 text-white rounded-xl p-6 sm:p-12 max-w-3xl mx-auto mb-10 flex flex-col gap-6">
     <!-- Profile images -->
     <div class="absolute left-4 top-4 flex">
       <img src="https://i.pravatar.cc/40?img=1" class="w-8 h-8 rounded-full border-2 border-white" />
@@ -449,8 +449,10 @@
 
     <!-- Input -->
     <div class="flex justify-center">
-      <input type="email" placeholder="Enter your email" class="bg-[linear-gradient(to_bottom_right,_#D9ECFF_0%,_#ffffff_100%)] p-2 rounded-l-md w-1/3 text-white placeholder:text-sm sm:placeholder:text-xs sm:p-1 md:placeholder:text-base" />
-      <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 rounded-r-md sm:text-xs md:px-4 sm:rounded-l-sm md:text-base">Subscribe</button>
+      <div class="flex flex-col sm:flex-row w-full max-w-md mx-auto gap-2">
+        <input type="email" placeholder="Enter your email" class="bg-[linear-gradient(to_bottom_right,_#D9ECFF_0%,_#ffffff_100%)] p-2 rounded-md w-full text-black placeholder:text-sm sm:placeholder:text-xs md:placeholder:text-base" />
+        <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 rounded-md sm:text-xs md:px-4 md:text-base w-full sm:w-auto">Subscribe</button>
+      </div>
     </div>
   </div>
   </section>
