Allow Full Screen applied on video section

--- a/index.html
+++ b/index.html
@@ -460,9 +460,9 @@
 
   <!-- Video Section -->
   <div class="relative max-w-2xl mx-auto rounded-xl overflow-hidden shadow-lg">
-    <iframe src="https://www.youtube.com/embed/nBXBZdPK-lo" alt="Video" class="w-full object-cover h-[500px]">
-
-    </iframe></div>
+    <div class="w-full aspect-video">
+      <iframe src="https://www.youtube.com/embed/nBXBZdPK-lo" title="Video" class="w-full h-full rounded-xl" allowfullscreen></iframe>
+    </div>
   </div>
 <!-- Testimonials Section -->
 <section class="py-16 px-4 text-center">
