Reduced margin size between the hero image and the context in specific to mobile view

--- a/index.html
+++ b/index.html
@@ -106,24 +106,12 @@
       </label>
           </div>
     </header>
-    <div class="md:hidden bg-white text-black w-full fixed top-[44px] left-0 z-40 space-y-2 mt-6 md:hidden shadow"">
-      <!-- Hidden Checkbox -->
-    <input type="checkbox" id="menu-toggle"  />
-    <!-- Mobile Menu -->
-           
-    <nav id="menu" class="hidden flex flex-col px-4 py-6 space-y-2 mt-6">
-      <a href="#" class="block hover:underline">Home</a>
-      <a href="#" class="block hover:underline">About</a>
-      <a href="#" class="block hover:underline">Courses</a>
-      <a href="#" class="block hover:underline">Contact</a>
-      <button class="text-sm border px-4 py-2 rounded">Login</button>
-    </div>
     
     <!-- Hero Section: Main content and image -->
   <section class="flex flex-col-reverse lg:flex-row items-center mt-8 px-4 sm:px-8 lg:px-24 py-10 sm:py-16 lg:py-20 bg-[linear-gradient(to_bottom_right,_#083F9B_0%,_#7F56D9_100%)] text-white">
-    <!-- Left side text content and testimonial horizontally aligned -->
-    <div class="flex flex-col mt-9 lg:flex-row flex-1 items-center lg:items-start w-full">
-      <div class="flex-1 text-center lg:text-left">
+  <!-- Left side text content and testimonial horizontally aligned -->
+  <div class="flex flex-col lg:flex-row flex-1 items-center lg:items-start w-full">
+  <div class="flex-1 text-center lg:text-left mt-2">
         <p class="uppercase text-xs sm:text-sm tracking-widest">Successful coaches are visionaries</p>
         <h1 class="text-3xl sm:text-4xl md:text-5xl text-left font-bold my-4 leading-tight">
           Good <span class="text-purple-400">coaching</span> is <br>
@@ -155,7 +143,7 @@
     </div>
     <!-- Right side: Tutor image stays at right end -->
     <div class="flex flex-col items-center lg:items-end relative w-full max-w-xs aspect-[1/1] md:items-end mt-8 lg:mt-0">
-      <div class="h-40 w-40 sm:h-60 sm:w-60 flex items-center justify-center">
+  <div class="h-28 w-28 sm:h-60 sm:w-60 flex items-center justify-center mt-2 sm:mt-0">
         <img src="images/brunette-woman-hugging-laptop 1.png" alt="Tutor" class="rounded-full object-cover w-full h-full">
       </div>
     </div>
