--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <section class="flex flex-col-reverse lg:flex-row items-center mt-8 px-4 sm:px-8 lg:px-24 py-10 sm:py-16 lg:py-20 bg-[linear-gradient(to_bottom_right,_#083F9B_0%,_#7F56D9_100%)] text-white">
   <!-- Left side text content and testimonial horizontally aligned -->
   <div class="flex flex-col lg:flex-row flex-1 items-center lg:items-start w-full">
-  <div class="flex-1 text-center lg:text-left mt-2">
+  <div class="flex-1 text-center lg:text-left mt-0 sm:mt-2">
         <p class="uppercase text-xs sm:text-sm tracking-widest">Successful coaches are visionaries</p>
         <h1 class="text-3xl sm:text-4xl md:text-5xl text-left font-bold my-4 leading-tight">
           Good <span class="text-purple-400">coaching</span> is <br>
@@ -143,7 +143,7 @@
     </div>
     <!-- Right side: Tutor image stays at right end -->
     <div class="flex flex-col items-center lg:items-end relative w-full max-w-xs aspect-[1/1] md:items-end mt-8 lg:mt-0">
-  <div class="h-28 w-28 sm:h-60 sm:w-60 flex items-center justify-center mt-2 sm:mt-0">
+  <div class="h-24 w-24 sm:h-60 sm:w-60 flex items-center justify-center mt-0 sm:mt-0">
         <img src="images/brunette-woman-hugging-laptop 1.png" alt="Tutor" class="rounded-full object-cover w-full h-full">
       </div>
     </div>
