Removed signup button on header at mobile view

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           </span>
         </div>
         <!-- Login/Signup Buttons -->
-        <button class="text-xs sm:text-sm md:text-base px-1 sm:px-2 md:px-3 py-1 text-gray border-b-2 hidden sm:inline">Login</button>
-        <button class="text-xs sm:text-sm md:text-base px-1 sm:px-2 md:px-3 py-1 bg-[linear-gradient(to_bottom_right,_#083F9B_0%,_#7F56D9_100%)] text-white rounded">Signup</button>
+  <button class="text-xs sm:text-sm md:text-base px-1 sm:px-2 md:px-3 py-1 text-gray border-b-2 hidden sm:inline">Login</button>
+  <!-- Signup button removed for mobile view, only present in hamburger menu -->
         <!-- Mobile Hamburger -->
         <div class="md:hidden">
           <button id="menu-btn" class="text-gray-700 focus:outline-none">
