--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
   <div class="relative bg-gradient-to-r from-indigo-500 to-pink-500 text-white rounded-xl p-6 sm:p-12 max-w-3xl mx-auto mb-10 flex flex-col gap-6">
     <!-- Profile images -->
     <div class="absolute left-4 top-4 flex">
-      <img src="https://i.pravatar.cc/40?img=1" class="w-8 h-8 rounded-full border-2 border-white" />
+  <img src="https://i.pravatar.cc/40?img=1" class="hidden sm:block w-8 h-8 rounded-full border-2 border-white" />
     </div>
     <div class="absolute left-4 bottom-4 flex">
     <img src="https://i.pravatar.cc/40?img=2" class="w-8 h-8 rounded-full border-2 border-white" />
@@ -421,7 +421,7 @@
         <img src="https://i.pravatar.cc/40?img=5" class="w-8 h-8 rounded-full border-2 border-white" />
         </div>
     <div class="absolute right-4 top-4 flex">
-        <img src="https://i.pravatar.cc/40?img=3" class="w-8 h-8 rounded-full border-2 border-white" />
+  <img src="https://i.pravatar.cc/40?img=3" class="hidden sm:block w-8 h-8 rounded-full border-2 border-white" />
       </div>
     <div class="absolute right-4 bottom-4 flex">
       <img src="https://i.pravatar.cc/40?img=4" class="w-8 h-8 rounded-full border-2 border-white" />
