margin bottom reduced beteween tutor and content

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </div>
     <!-- Right side: Tutor image stays at right end -->
     <div class="flex flex-col items-center lg:items-end relative w-full max-w-xs aspect-[1/1] md:items-end mt-8 lg:mt-0">
-  <div class="h-24 w-24 sm:h-60 sm:w-60 flex items-center justify-center mt-0 sm:mt-0">
+  <div class="h-24 w-24 sm:h-60 sm:w-60 flex items-center justify-center -mb-4 sm:mb-0 mt-0 sm:mt-0">
         <img src="images/brunette-woman-hugging-laptop 1.png" alt="Tutor" class="rounded-full object-cover w-full h-full">
       </div>
     </div>
@@ -155,11 +155,9 @@
         <!-- Brand logos -->
         <img src="images/spotify.svg" alt="Spotify" class="w-12 sm:w-16 md:w-20 h-auto">
         <img src="images/amazon.svg" alt="Amazon" class="w-12 sm:w-16 md:w-20 h-auto">
-            <img src="images/spotify.svg" alt="Spotify" class="w-16 sm:w-18 h-auto">
-            <img src="images/cisco.svg" alt="Cisco" class="w-16 sm:w-18 h-auto">
-            <img src="images/logitech.svg" alt="Logitech" class="w-16 sm:w-18 h-auto">
-            <img src="images/amazon.svg" alt="Amazon" class="w-16 sm:w-18 h-auto">
-        </div>
+        <img src="images/cisco.svg" alt="Cisco" class="w-12 sm:w-16 md:w-20 h-auto">
+        <img src="images/logitech.svg" alt="Logitech" class="w-12 sm:w-16 md:w-20 h-auto">
+      </div>
     </section>
 
     <section class="pt-10 sm:pt-16 lg:pt-20 pb-10 px-4 sm:px-6 lg:px-16 bg-[linear-gradient(to_bottom_right,_#F0F3FF_0%,_#D9ECFF_100%)]">
