--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <section class="flex flex-col-reverse lg:flex-row items-center mt-4 px-4 sm:px-8 lg:px-24 py-4 sm:py-16 lg:py-20 bg-[linear-gradient(to_bottom_right,_#083F9B_0%,_#7F56D9_100%)] text-white">
   <!-- Left side text content and testimonial horizontally aligned -->
   <div class="flex flex-col lg:flex-row flex-1 items-center lg:items-start w-full">
-  <div class="flex-1 text-center lg:text-left mt-0 sm:mt-2">
+  <div class="flex-1 text-center lg:text-left mt-0 sm:-mt-6">
         <p class="uppercase text-xs sm:text-sm tracking-widest">Successful coaches are visionaries</p>
         <h1 class="text-3xl sm:text-4xl md:text-5xl text-left font-bold my-4 leading-tight">
           Good <span class="text-purple-400">coaching</span> is <br>
